// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaxDisclaimer /> should display null 1`] = `
<Fragment>
  <Portal
    name="product.tax-disclaimer.before"
    props={null}
  />
  <Portal
    name="product.tax-disclaimer"
    props={null}
  />
  <Portal
    name="product.tax-disclaimer.after"
    props={null}
  />
</Fragment>
`;

exports[`<TaxDisclaimer /> should display the component 1`] = `
<Fragment>
  <Portal
    name="product.tax-disclaimer.before"
    props={null}
  />
  <Portal
    name="product.tax-disclaimer"
    props={null}
  >
    <div
      aria-hidden={true}
      data-test-id="taxDisclaimer"
    >
      <Translate
        className="css-fazkyv"
        params={Object {}}
        role={null}
        string="product.tax_disclaimer"
      />
    </div>
  </Portal>
  <Portal
    name="product.tax-disclaimer.after"
    props={null}
  />
</Fragment>
`;
